@@ -5,6 +5,8 @@ Some changes for improvements
     - FLTK_EXT_VERSION in Enumeration.H for checking customized version.
 	- fl_message_widow_color_ for changing fl_ask widget window backgrou
 	  nd color when it creating.
+	- fl_message_button_color_[3] array for chaning fl_ask widget window
+	  buttons background color when it creating.
 
 CHANGES IN FLTK 1.3.4-2-ts              UPDATED: Nov 04 2017
 
